RESOLVED FIXED 129998
GPRInfo::toIndex should return InvalidIndex for non-temp registers on ARM64
https://bugs.webkit.org/show_bug.cgi?id=129998
Summary GPRInfo::toIndex should return InvalidIndex for non-temp registers on ARM64
Filip Pizlo
Reported 2014-03-09 20:08:47 PDT
Patch forthcoming.
Attachments
the patch (1.83 KB, patch)
2014-03-09 20:12 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2014-03-09 20:12:06 PDT
Created attachment 226276 [details] the patch Still running tests to confirm that this is ok.
Mark Lam
Comment 2 2014-03-09 20:17:17 PDT
Comment on attachment 226276 [details] the patch Do we need to ASSERT(index <= regT15) in toRegister() to match this?
Filip Pizlo
Comment 3 2014-03-09 20:19:19 PDT
(In reply to comment #2) > (From update of attachment 226276 [details]) > Do we need to ASSERT(index <= regT15) in toRegister() to match this? I suppose we could add one. I'm not sure how much good it would do, though.
Geoffrey Garen
Comment 4 2014-03-09 23:48:04 PDT
Comment on attachment 226276 [details] the patch r=me
Filip Pizlo
Comment 5 2014-03-09 23:51:34 PDT
Note You need to log in before you can comment on or make changes to this bug.