Source/JavaScriptCore/jit/GPRInfo.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2011, 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2011, 2013, 2014 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -601,6 +601,8 @@ public:
     }
     static unsigned toIndex(GPRReg reg)
     {
+        if (reg > regT15)
+            return InvalidIndex;
         return (unsigned)reg;
     }
 
